[gd_scene load_steps=5 format=3 uid="uid://drnpm0ke65fk8"]

[ext_resource type="FontFile" uid="uid://5ean8rxmtb5" path="res://Sprites/alagard.ttf" id="1_lekon"]
[ext_resource type="Script" path="res://Scripts/MenuInicial.gd" id="1_mh8l5"]
[ext_resource type="Theme" uid="uid://c67hcb4kgcofc" path="res://TemaUI/UITema.tres" id="2_8p1tq"]
[ext_resource type="Texture2D" uid="uid://dy8gglsx36i5s" path="res://Sprites/Background/Background.png" id="3_u5r2c"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mh8l5")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_u5r2c")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 145
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 145
theme_override_constants/margin_bottom = 55

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="Título" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
self_modulate = Color(0.121569, 0.121569, 0.121569, 1)
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("1_lekon")
theme_override_font_sizes/normal_font_size = 90
bbcode_enabled = true
text = "[center]INOVAGames
Godot"
scroll_active = false

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_right = 200

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Jogar" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("2_8p1tq")
theme_override_fonts/font = ExtResource("1_lekon")
theme_override_font_sizes/font_size = 61
text = "Jogar"

[node name="Opcoes" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("2_8p1tq")
theme_override_fonts/font = ExtResource("1_lekon")
theme_override_font_sizes/font_size = 61
text = "Options"

[node name="Sair" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("2_8p1tq")
theme_override_fonts/font = ExtResource("1_lekon")
theme_override_font_sizes/font_size = 61
text = "Sair"

[node name="ConfigMenu" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 9

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/ConfigMenu"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 40
text = "Volume master"
fit_content = true

[node name="MasterVol" type="HSlider" parent="MarginContainer/ConfigMenu"]
layout_mode = 2
min_value = -80.0
max_value = 0.0

[node name="RichTextLabel2" type="RichTextLabel" parent="MarginContainer/ConfigMenu"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 40
text = "Volume música"
fit_content = true

[node name="MusicVol" type="HSlider" parent="MarginContainer/ConfigMenu"]
layout_mode = 2
min_value = -80.0
max_value = 0.0

[node name="RichTextLabel3" type="RichTextLabel" parent="MarginContainer/ConfigMenu"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 40
text = "Volume Efeitos
"
fit_content = true

[node name="EffectVol" type="HSlider" parent="MarginContainer/ConfigMenu"]
layout_mode = 2
min_value = -80.0
max_value = 0.0

[node name="WindowSize" type="OptionButton" parent="MarginContainer/ConfigMenu"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "1152 x 648"
popup/item_0/id = 0
popup/item_1/text = "1280 x 728"
popup/item_1/id = 1
popup/item_2/text = "1920 x 1080"
popup/item_2/id = 2

[node name="WindowMode" type="OptionButton" parent="MarginContainer/ConfigMenu"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "Fullscreen"
popup/item_0/id = 0
popup/item_1/text = "Window"
popup/item_1/id = 1
popup/item_2/text = "Borderless window"
popup/item_2/id = 2
popup/item_3/text = "Borderless Fullscreen"
popup/item_3/id = 3

[node name="VoltarConfig" type="Button" parent="MarginContainer/ConfigMenu"]
layout_mode = 2
theme = ExtResource("2_8p1tq")
theme_override_fonts/font = ExtResource("1_lekon")
theme_override_font_sizes/font_size = 40
text = "Voltar"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/Jogar" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/Opcoes" to="." method="_on_opcoes_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/Sair" to="." method="_on_sair_pressed"]
[connection signal="value_changed" from="MarginContainer/ConfigMenu/MasterVol" to="." method="_on_master_vol_value_changed"]
[connection signal="value_changed" from="MarginContainer/ConfigMenu/MusicVol" to="." method="_on_music_vol_value_changed"]
[connection signal="value_changed" from="MarginContainer/ConfigMenu/EffectVol" to="." method="_on_effect_vol_value_changed"]
[connection signal="item_selected" from="MarginContainer/ConfigMenu/WindowSize" to="." method="_on_window_size_item_selected"]
[connection signal="item_selected" from="MarginContainer/ConfigMenu/WindowMode" to="." method="_on_window_mode_item_selected"]
[connection signal="pressed" from="MarginContainer/ConfigMenu/VoltarConfig" to="." method="_on_voltar_config_pressed"]
